src/test/06-Errors/error-static-access-member.txt
error-static-access-member.ck:9:38: error: non-static member 'foo' used from static function
[9]     fun static Foo getFoo() { return foo; }
                                         ^
error-static-access-member.ck: ...in function 'Foo Bar.getFoo()'
